[package]
name = "bottom-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
rayon = "1.8.0"
regex = { version = "1.9.6", features = ["pattern"] }
thiserror = "1.0.49"
